Regression: Custom sockets ignore the draw_color method and are always Magenta #112716

Closed
opened 2023-09-22 14:01:01 +02:00 by Omar Emara · 3 comments
Member

Blender Version
Broken: main, 4.0
Worked: 3.6

This is a regression that was introduced in e071288ab2

Short description of error

Custom sockets that set their color through the draw_color instead of draw_color_simple are always Magenta colored and ignore the color set in draw_color.

Exact steps for others to reproduce the error

  • Start from the Custom Nodes python template.
  • Change the draw_color_simple class method into a normal draw_color method.
    # Socket color
    def draw_color(self, context, node):
        return (1.0, 0.4, 0.216, 0.5)
  • Run the script and add a custom node.
  • Notice how the socket color is Magenta instead of the set color.
**Blender Version** Broken: main, 4.0 Worked: 3.6 This is a regression that was introduced in e071288ab2 **Short description of error** Custom sockets that set their color through the `draw_color` instead of `draw_color_simple` are always Magenta colored and ignore the color set in `draw_color`. **Exact steps for others to reproduce the error** - Start from the Custom Nodes python template. - Change the `draw_color_simple` class method into a normal `draw_color` method. ``` # Socket color def draw_color(self, context, node): return (1.0, 0.4, 0.216, 0.5) ``` - Run the script and add a custom node. - Notice how the socket color is Magenta instead of the set color.
Omar Emara added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2023-09-22 14:01:02 +02:00
Author
Member

@LukasTonne A continuation of #112622.

@LukasTonne A continuation of #112622.
Iliya Katushenock added the
Interest
Nodes & Physics
label 2023-09-22 15:07:01 +02:00
Iliya Katushenock changed title from Custom sockets ignore the draw_color method and are always Magenta to Regression: Custom sockets ignore the draw_color method and are always Magenta 2023-09-22 15:07:18 +02:00

I can confirm.
Even seeing the documentation, I still find this new API a bit confusing.
I'm not sure how the draw_color callback can be used.

I can confirm. Even seeing the [documentation](https://docs.blender.org/api/dev/bpy.types.NodeSocket.html#bpy.types.NodeSocket.draw_color), I still find this new API a bit confusing. I'm not sure how the `draw_color` callback can be used.

Adding onto this, this is what the changelog says:

It does not take a context or node instance but that is sufficient for most use cases. The new callback is used in cases where concrete node instance exists, for example drawing node group interfaces.

Not sure I understand what that second part means here for custom nodes, the lack of access to the node instance does make some use cases impossible. Would at least be nice to know why this change was made if it's not reverted for custom nodes, couldn't find a concrete reason in the commits.

Adding onto this, this is what the changelog says: > It does not take a context or node instance but that is sufficient for most use cases. The new callback is used in cases where concrete node instance exists, for example drawing node group interfaces. Not sure I understand what that second part means here for custom nodes, the lack of access to the node instance does make some use cases impossible. Would at least be nice to know why this change was made if it's not reverted for custom nodes, couldn't find a concrete reason in the commits.
Philipp Oeser added
Priority
High
and removed
Priority
Normal
labels 2023-10-30 11:25:26 +01:00
Philipp Oeser added this to the 4.0 milestone 2023-10-30 11:26:14 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-11-01 09:30:16 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#112716
No description provided.